src/objects/vlocity_ins__OpportunityAppliedPromotionItem__c.object
<CustomObject>
    <description>An Opportunity Applied Promotion affects one or more opportunity products. This object is the intersection between an Opportunity Applied Promotion and an Opportunity Product that is affected by it.</description>
    <fields>
        <fullName>vlocity_ins__AppliedAction__c</fullName>
        <label>Applied Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Apply</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaximumChildItemQuantity__c</fullName>
        <label>Max Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinimumChildItemQuantity__c</fullName>
        <label>Min Children Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityAppliedPromotionId__c</fullName>
        <label>Affected Items</label>
        <referenceTo>vlocity_ins__OpportunityAppliedPromotion__c</referenceTo>
        <relationshipLabel>Opportunity Applied Promotion Affected Items</relationshipLabel>
        <relationshipName>OpportunityAppliedPromotionAffectedItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityLineItemId__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Line Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Applied Promotion Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Applied Promotion Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>